[gd_scene load_steps=5 format=2]

[ext_resource path="res://Content/Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Content/Scenes/Level/grrg.png" type="Texture" id=2]
[ext_resource path="res://Content/Graphics/Menu/Subtitle.png" type="Texture" id=3]
[ext_resource path="res://Content/Graphics/Menu/Title.png" type="Texture" id=4]

[node name="Menu" type="Node"]

script = ExtResource( 1 )

[node name="grrg" type="Sprite" parent="." index="0"]

position = Vector2( 512.697, 301.625 )
scale = Vector2( 0.534567, 0.553119 )
texture = ExtResource( 2 )

[node name="Subtitle" type="Sprite" parent="." index="1"]

position = Vector2( 237.883, 124.074 )
scale = Vector2( 1.28306, 1.93371 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="." index="2"]

position = Vector2( 237.796, 65.1871 )
scale = Vector2( 1.24349, 1.70654 )
texture = ExtResource( 4 )

[node name="LabelNbOfEpicicles" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 786.0
margin_top = 44.0
margin_right = 930.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Number of epicicles:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="LineNbOfEpicicles" type="LineEdit" parent="LabelNbOfEpicicles" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = -4.0
margin_right = 198.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "1"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="LabelColorL" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 575.0
margin_top = 521.0
margin_right = 679.0
margin_bottom = 543.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Colour of lines"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="ColorPickerButtonLine" type="ColorPickerButton" parent="LabelColorL" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = -8.0
margin_right = -9.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="LabelColorC" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 278.0
margin_top = 521.0
margin_right = 435.0
margin_bottom = 543.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Colour of circumference"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="ColorPickerButtonCirc" type="ColorPickerButton" parent="LabelColorC" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -34.0
margin_top = -5.0
margin_right = -2.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="LabelNbOfSegments" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 786.0
margin_top = 107.0
margin_right = 930.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Number of segments:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="LineNbOfSegments" type="LineEdit" parent="LabelNbOfSegments" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_top = -5.0
margin_right = 200.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "150"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="LabelRadius" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 875.0
margin_top = 170.0
margin_right = 934.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Radius:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="LineRadiusOfCircumference" type="LineEdit" parent="LabelRadius" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = -4.0
margin_right = 109.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "280"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="LabelThicknessOfLines" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 801.0
margin_top = 245.0
margin_right = 931.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.203125, 0.0206299, 0.0206299, 1 )
custom_colors/font_color_shadow = Color( 0.265625, 0.249023, 0.249023, 1 )
text = "Thickness of lines:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="LineThiccness" type="LineEdit" parent="LabelThicknessOfLines" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = -3.0
margin_right = 182.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "1"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="Global" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 859.0
margin_top = 507.0
margin_right = 975.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Global" type="Label" parent="Global" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 13.0
margin_right = 104.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="text_changed" from="LabelNbOfEpicicles/LineNbOfEpicicles" to="." method="_on_LineNbOfEpicicles_text_changed"]

[connection signal="text_entered" from="LabelNbOfEpicicles/LineNbOfEpicicles" to="." method="_on_LineNbOfEpicicles_text_entered"]

[connection signal="color_changed" from="LabelColorL/ColorPickerButtonLine" to="." method="_on_ColorPickerButtonLine_color_changed"]

[connection signal="color_changed" from="LabelColorC/ColorPickerButtonCirc" to="." method="_on_ColorPickerButtonCirc_color_changed"]

[connection signal="text_changed" from="LabelNbOfSegments/LineNbOfSegments" to="." method="_on_LineNbOfSegments_text_changed"]

[connection signal="text_changed" from="LabelRadius/LineRadiusOfCircumference" to="." method="_on_LineRadiusOfCircumference_text_changed"]

[connection signal="text_changed" from="LabelThicknessOfLines/LineThiccness" to="." method="_on_LineThiccness_text_changed"]

[connection signal="pressed" from="Global" to="." method="_on_Global_pressed"]


